maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  //while(!isOverBaggle()){
  for(i <- 1 to 100000){
      keepHandOnSideWall()
	}
}

def keepHandOnSideWall(){
  
  if(isFacingWall()){
    left()
    if(isFacingWall()){
      left(); left()
      if(isFacingWall()){
        right(),right(),right()
      }    }
    if(!isFacingWall()){
      forward()
    		}
   	 
     }

  else{
    		right()
        if(!isFacingWall()){
          forward()
        	}
        else{left(); forward()}
  }
}

